# AlifeRLPipeline

./: .gitignore  README.md  dataset_analyzer.py  exporter.py  main.py  pensées.md  pyproject.toml  requirements.txt
profiles/best_lenia/: lenia.py  loader.py  simulator.py
profiles/best_lenia/clipvip/: __init__.py  clipvip_reward.py  miniblocks.py
profiles/best_lenia/configs/: test.json
profiles/best_lenia/utils/: hash_params.py  leniaparams.py
profiles/ca2d/: automaton.py  ca2d.py  generator.py  loader.py  simulator.py
profiles/ca2d/configs/: base.json
profiles/lenia/: __init__.py  automaton.py  clipvip_reward.py  clipvip_rewardor.py  generator.py  lenia.py  main_utils.py  rewarder.py  simulator.py
profiles/lenia/clipvip/: clip_vip.py
profiles/lenia/configs/: default.json  test.json
profiles/lenia/generator/: generator.py
profiles/lenia/rewarder/: rewarder.py
profiles/lenia/rewardor/: rewardor.py
profiles/lenia/simulation/: simulation.py
profiles/lenia/simulator/: automaton.py  lenia_model.py  simulator.py
profiles/lenia/utils/: finder_utils.py  funcgen.py  leniaparams.py
profiles/macelenia/: generator.py  loader.py  mace_lenia.py
profiles/macelenia/configs/: macebase.json
rlhfalife/: __init__.py  benchmarker.py  data_managers.py  genetic_search.py  labeler.py  quad_labeler.py  trainer.py  utils.py
rlhfalife/torchutils/: torchrewarder.py
rlhfalife/utils/: __init__.py  generator.py  loader.py  rewarder.py  simulator.py
src/: benchmarker.py  labeler.py  trainer.py  utils.py
src/labeler/: labeler.py
(+4 files in other folders)
