[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "rlhfalife"
version = "0.1"
authors = [
    { name = "Eugène Bergeron", email = "elrbergeron@gmail.com"},
    { name = "Vassilis Papadopoulos", email = "vassilis.physics@gmail.com" },
]
description = "RLHF Alife, a package to facilitate implementing a RLHF pipeline to train a parameters generator."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.hatch.build.targets.wheel]
packages = ["pyca"]
include = ["pyca/interface/files/*"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]